# chatbot-with-tables

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  test_table_bot.py
table_bot/: __init__.py  agent.py
templates/: api_key.html  index.html
